--- a/files/spanje/index.css
+++ b/files/spanje/index.css
@@ -66,40 +66,6 @@ a {
     font-size: 3vmax;
 }
 
-.background {
-    width: 100%;
-    height: 40vh;
-
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image: url(./pictures/achtergrond.jpg);
-}
-
-.information {
-    width: 100vw;
-    height: fit-content;
-
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 10vh;
-    margin-top: 3vh;
-}
-
-.verticalSection {
-    width: 40vw;
-    height: fit-content;
-
-    padding-left: 4vw;
-    padding-right: 4vw;
-}
-
-.title {
-    font-size: 4vmax;
-    font-weight: bold;
-    margin-bottom: 2vh;
-}
-
 #nextButton {
     position: fixed;
     right: 2vmax;
@@ -142,3 +108,24 @@ a {
 
     margin-right: 1vw;
 }
+
+.information {
+    width: 100vw;
+    height: fit-content;
+
+    display: flex;
+    justify-content: space-around;
+}
+
+.left {
+    width: 60vw;
+    height: fit-content;
+
+}
+
+.right {
+    width: 30vw;
+    height: fit-content;
+}
+
+/* Working */
